[package]
name = "boxcars-py"
version = "0.1.1"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

[package.metadata.maturin]
classifier = [
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[dependencies]
boxcars = "0.7.2"
serde_json = "1.0.47"

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module", "python3"]

[lib]
name = "boxcars_py"
crate-type = ["cdylib"]
