[package]
name = "boxcars-py"
version = "0.1.16"
authors = ["Justus K <justus.k@protonmail.com>", "Matthew Mage <sciguymjm@gmail.com>"]
edition = "2021"
exclude = [".*", "tests/", "Makefile"]

[dependencies]
boxcars = "0.9.10"
serde_json = "1.0.107"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module", "abi3-py37"]

[lib]
name = "boxcars_py"
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
panic = "abort"
