[tool.poetry]
name = "boxcars_py"
version = "0.1.12"
description = "Python bindings for the Rocket League replay parser boxcars."
authors = ["Justus K <justus.k@pm.me>", "Matthew Mage <sciguymjm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SaltieRL/BoxcarWrapper"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "3.2.3"
maturin = "0.7.7"
